# deepmd-gnn

./: .gitattributes  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  README.md  noxfile.py  pyproject.toml  requirements-overrides.txt
.github/workflows/: release.yaml  remove_test_cuda_label.yml  test.yaml  test_cuda.yml
build_backend/: dp_backend.py
deepmd_gnn/: __init__.py  __main__.py  argcheck.py  autograd.py  cli.py  deepmd_ops.py  edge.py  env.py  export.py  mace.py  mace_network.py  mace_off.py  mace_off_cli.py  nequip.py  op.py  pt.py  pt_expt.py  sander.py  stat_compat.py
docs/: conf.py  development.rst  index.rst  parameters.rst  sander_qmmm.rst
examples/mace_off/: README.md  __init__.py  load_mace_off.py
examples/sander_qmmm/: README.md  sander_mace.conf  sander_wrapper.py
op/: CMakeLists.txt  edge_index.cc  edge_index_cuda.cu  edge_index_cuda.h
op/cudart/: CMakeLists.txt  cudart_stub.cc
tests/: __init__.py  _pt_expt.py  mace.json  nequip.json  test_cli.py  test_lammps.py  test_mace_comm.py  test_mace_off.py  test_model.py  test_nequip_comm.py  test_op.py  test_pt_expt.py  test_sander.py  test_training.py
